<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/signupCoordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".ui.login.LoginActivity">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true">
            <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/tall_toolbar_height"
                    android:fitsSystemWindows="true">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:contentScrim="@color/colorBackground"
                        app:expandedTitleGravity="center"
                        app:layout_scrollFlags="snap|enterAlways">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/back"
                            app:layout_collapseMode="parallax"
                            app:layout_collapseParallaxMultiplier="0.5"
                            android:scaleType="centerCrop"/>

                    <androidx.appcompat.widget.Toolbar
                            android:id="@+id/toolbarSignup"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            app:layout_collapseMode="pin"
                            app:titleTextColor="#FFF"/>

                </com.google.android.material.appbar.CollapsingToolbarLayout>
            </com.google.android.material.appbar.AppBarLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_wellcome"
                    android:textColor="@color/secondaryDarkColor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textAlignment="center" android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputUsername"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/username"
                    android:nextFocusDown="@id/inputPassword"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="textPersonName"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputPassword"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:endIconMode="password_toggle"
                    android:hint="@string/password"
                    android:layout_marginBottom="16dp" android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signup"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/signup"
                    android:onClick="signup"
                    android:layout_marginBottom="8dp" android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>
            <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:id="@+id/progressbar"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>