<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/taskCoordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".ui.task.TasksActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tall_toolbar_height"
            android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/colorBackground"
                app:expandedTitleGravity="center"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed|snap">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/back"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5"
                    android:scaleType="centerCrop"/>

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarTask"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:titleTextColor="#FFF"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTask"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="70dp"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/noTaskView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:text="@string/no_task_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="64dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
                <TextView
                        android:text="@string/no_task_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView5"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="16dp"
            android:onClick="showTaskDialog"
            android:text="@string/add_new_task"
            app:icon="@drawable/ic_add"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>